--- a/_Imports.razor
+++ b/_Imports.razor
@@ -7,5 +7,5 @@
 @using Microsoft.JSInterop
 @using my_blazor_scheduler
 @using my_blazor_scheduler.Shared
-@using Syncfusion.EJ2.Blazor.Schedule
-@using Syncfusion.EJ2.Blazor.Data
+@using Syncfusion.Blazor.Schedule
+@using Syncfusion.Blazor.Data
