--- a/Pages/Index.razor
+++ b/Pages/Index.razor
@@ -1,13 +1,12 @@
 ﻿@page "/"
-@using Syncfusion.EJ2.Blazor.Schedule
 
-<EjsSchedule TValue="AppointmentData" SelectedDate="@(new DateTime(2020, 1, 10))" CurrentView="View.Month">
-    <ScheduleViews>
-        <ScheduleView Option="View.Day" StartHour="07:00" EndHour="15:00"></ScheduleView>
-        <ScheduleView Option="View.Week" StartHour="10:00" EndHour="18:00"></ScheduleView>
-        <ScheduleView Option="View.Month" ShowWeekend="false"></ScheduleView>
-    </ScheduleViews>
-    <ScheduleEventSettings DataSource="@DataSource">
+<SfSchedule TValue="AppointmentData" SelectedDate="@(new DateTime(2020, 1, 10))" CurrentView="View.Month">
+<ScheduleViews>
+    <ScheduleView Option="View.Day" StartHour="07:00" EndHour="15:00"></ScheduleView>
+    <ScheduleView Option="View.Week" StartHour="10:00" EndHour="18:00"></ScheduleView>
+    <ScheduleView Option="View.Month" ShowWeekend="false"></ScheduleView>
+</ScheduleViews>
+<ScheduleEventSettings DataSource="@DataSource">
         <ScheduleField Id="EventID">
             <FieldSubject Name="EventSubject"></FieldSubject>
             <FieldStartTime Name="EventStart"></FieldStartTime>
@@ -20,11 +19,11 @@
         <EjsDataManager Url="https://js.syncfusion.com/demos/ejservices/api/Schedule/LoadData" Adaptor="@Syncfusion.EJ2.Blazor.Adaptors.WebApiAdaptor">
         </EjsDataManager>
     </ScheduleEventSettings>*@
-    
-</EjsSchedule>
+
+</SfSchedule>
 
 @code{
-    List<AppointmentData> DataSource = new List<AppointmentData>
+        List<AppointmentData> DataSource = new List<AppointmentData>
     {
         new AppointmentData { EventID = 1, EventSubject = "Paris", EventStart = new DateTime(2020, 1, 10, 10, 0, 0) , EventEnd = new DateTime(2020, 1, 10, 12, 0, 0) },
         new AppointmentData { EventID = 2, EventSubject = "Germany", EventStart = new DateTime(2020, 1, 13, 10, 0, 0) , EventEnd = new DateTime(2020, 1, 13, 12, 0, 0) }
@@ -37,4 +36,5 @@
         public DateTime EventStart { get; set; }
         public DateTime EventEnd { get; set; }
     }
+
 }
