--- a/Pages/_Host.cshtml
+++ b/Pages/_Host.cshtml
@@ -1,20 +1,20 @@
 ﻿@page "/"
 @namespace my_blazor_scheduler.Pages
 @addTagHelper *, Microsoft.AspNetCore.Mvc.TagHelpers
+@{
+    Layout = null;
+}
 
 <!DOCTYPE html>
 <html lang="en">
 <head>
-    <meta charset="utf-8" /> 
+    <meta charset="utf-8" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
     <title>my-blazor-scheduler</title>
     <base href="~/" />
     <link rel="stylesheet" href="css/bootstrap/bootstrap.min.css" />
     <link href="css/site.css" rel="stylesheet" />
-    <link href="https://cdn.syncfusion.com/ej2/17.4.49/material.css" rel="stylesheet" />
-    <script src="https://cdn.syncfusion.com/ej2/17.4.49/dist/ej2.min.js"></script>
-    <script src="https://cdn.syncfusion.com/ej2/17.4.49/dist/ejs.interop.min.js"></script>
-
+    <link href="_content/Syncfusion.Blazor/styles/material.css" rel="stylesheet" />
 </head>
 <body>
     <app>
@@ -28,7 +28,7 @@
         <environment include="Development">
             An unhandled exception has occurred. See browser dev tools for details.
         </environment>
-        <a href class="reload">Reload</a>
+        <a href="" class="reload">Reload</a>
         <a class="dismiss">🗙</a>
     </div>
 
