--- a/Pages/Index.razor
+++ b/Pages/Index.razor
@@ -16,8 +16,8 @@
 
     @*For remote data, uncomment and make use of the below ScheduleEventSettings and remove the previous ScheduleEventSettings*@
     @*<ScheduleEventSettings TValue="AppointmentData">
-        <EjsDataManager Url="https://js.syncfusion.com/demos/ejservices/api/Schedule/LoadData" Adaptor="@Syncfusion.EJ2.Blazor.Adaptors.WebApiAdaptor">
-        </EjsDataManager>
+        <SfDataManager Url="https://js.syncfusion.com/demos/ejservices/api/Schedule/LoadData" Adaptor="@Syncfusion.Blazor.Adaptors.WebApiAdaptor">
+        </SfDataManager>
     </ScheduleEventSettings>*@
 
 </SfSchedule>
