Update the project

--- a/_Imports.razor
+++ b/_Imports.razor
@@ -4,8 +4,9 @@
 @using Microsoft.AspNetCore.Components.Forms
 @using Microsoft.AspNetCore.Components.Routing
 @using Microsoft.AspNetCore.Components.Web
+@using Microsoft.AspNetCore.Components.Web.Virtualization
 @using Microsoft.JSInterop
-@using my_blazor_scheduler
-@using my_blazor_scheduler.Shared
+@using GettingStartedSample
+@using GettingStartedSample.Shared
+@using Syncfusion.Blazor
 @using Syncfusion.Blazor.Schedule
-@using Syncfusion.Blazor.Data
